feat: Install and configure Supabase for authentication
 -added supabase in package.json
-Created supabase.service.ts for client init
-Implemented basic authentication methods in service/auth.service.ts
-Enviroments updated with Supabase credentials

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "@supabase/supabase-js": "^2.46.1",
+    "firebase": "^11.0.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -59,6 +61,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.0"
+  },
+  "overrides": {
+    "@supabase/supabase-js": {
+      "@supabase/auth-js": "2.61.0"
+    }
   },
   "description": "An Ionic project"
 }
